monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4024/A4024_e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4024;

grammar A4024_e {

  A;

  Super = ["c"];

  Sub extends Super = c:A;
}
